# octotail

./: Makefile  README.md  cliff.toml  main.py  post-receive.sample  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  e2e.yml  main.yml  release.yml  sleep.yml  test.yml
e2e/: Dockerfile  prepare.sh  run.sh
examples/: post-receive.sample
hacks/: pycheck  pycheck-fix  pycheck-fmt  pycheck-parallel  update-readme
octotail/: __init__.py  browser.py  cli.py  fmt.py  gh.py  git.py  main.py  manager.py  mitm.py  msg.py  streamer.py  utils.py  ws.py  x.py
tests/: conftest.py  test_browser.py  test_cli.py  test_fmt.py  test_gh.py  test_git.py  test_manager.py  test_mitm.py  test_streamer.py  test_utils.py
