[project]
name = "octotail"
version = "1.0.8"
description = "Live tail GitHub Actions runs on git push"
authors = [
    { name = "Rareș Cosma", email = "rares@getbetter.ro" }
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["github-actions", "tail", "post-receive", "codecrafters", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
]
dependencies = [
    "fake-useragent == 1.5.1",
    "mitmproxy == 11.0.0",
    "pygithub == 2.4.0",
    "pykka == 4.0.2",
    "pyppeteer == 2.0.0",
    "pyppeteer-stealth == 2.7.4",
    "pyxdg == 0.28",
    "rich == 13.9.2",
    "termcolor == 2.5.0",
    "typer-slim == 0.12.5",
    "websockets == 10.4",
]

[project.scripts]
octotail = "octotail.main:_main"

[project.urls]
Homepage = "https://github.com/rarescosma/octotail"
Documentation = "https://github.com/rarescosma/octotail"
"Source code" = "https://github.com/rarescosma/octotail"

[tool.uv]
dev-dependencies = [
    "black == 24.10.0",
    "bumpversion==0.6.0",
    "isort == 5.13.2",
    "mypy == 1.11.2",
    "pycln == 2.4.0",
    "pylint == 3.3.1",
    "ptyprocess == 0.7.0",
    "vulture == 2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/octotail",
    "/examples",
]
